# Bruprosjekt

./: Resultater.csv  _quarto.yml  index.qmd  pyproject.toml
.github/workflows/: periodic-render.yml
_site/: index.html
docs/: index.html  search.json
