[project]
name = "bruprosjekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyyaml>=6.0.3",
    "tabulate>=0.9.0",
]
